Solved 'the uneven lines' problem

--- a/crossword-generator/Elm/crossword-generator.css
+++ b/crossword-generator/Elm/crossword-generator.css
@@ -1,12 +1,11 @@
 #crossword {
-   border-spacing: 1px;
+   border-spacing: 0px;
+   border-collapse: collapse;
 }
 
 .word {
   vertical-align: middle;
-  align-items: center;
   text-align: center;
-  justify-content: center;
   margin: 0;
   padding: 0;
 }
@@ -16,7 +15,7 @@
   width: 30px;
   height: 30px;
   margin: 0px;
-  padding: 0;
+  padding: 0px;
 }
 
 .letter {
@@ -26,4 +25,27 @@
 .keyword {
   border-width: 2px;
   background-color: gray;
+}
+
+.filler {
+  height: 100%;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  line-height: 18px;
+}
+
+.word:first-of-type .keyword {
+  border-top-width: 1px;
+}
+
+.word:first-of-type .keyword .filler {
+  border-top: 1px solid black;
+}
+
+.word:last-of-type .keyword {
+  border-bottom-width: 1px;
+}
+
+.word:last-of-type .keyword .filler {
+  border-bottom: 1px solid black;
 }
